Added missing components

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
             />
             <h3>Experience</h3>
-            <p><br />UI/UX Development and Software Development</p>
+            <p><br />Software Development/Product Developer</p>
             </div>
             <div class="details-container">
             <img
@@ -108,7 +108,7 @@
                 I'm an undergraduate student at BITS Pilani, Hyderabad, with a strong foundation in
                 software development, algorithms, and system design. Passionate about coding, AI,
                 machine learning, and tech innovations, I love solving complex problems and building
-                scalable, high-quality web applications.With a keen interest in data structures,
+                scalable,high-quality web applications.With a keen interest in data structures,
                 algorithms, and backend development, I strive to create efficient and impactful solutions.
                 I am always eager to learn, grow, and take on new challenges, collaborating on projects
                 that drive innovation and make a real difference.
@@ -143,22 +143,26 @@
                     </div>
             </article>
             <article>
-                <imgsrc="./assets/checkmark.png"
+                <img
+                src="./assets/checkmark.png"
                 alt="Experience icon"
-                class="icon"/>
+                class="icon"
+                />
                 <div>
-                <h3>CSS</h3>
-                <p>Experienced</p>
-                </div>
+                    <h3>CSS</h3>
+                    <p>Experienced</p>
+                    </div>
             </article>
             <article>
-                <imgsrc="./assets/checkmark.png"
+                <img
+                src="./assets/checkmark.png"
                 alt="Experience icon"
-                class="icon"/>
+                class="icon"
+                />
                 <div>
-                <h3>Product design.</h3>
-                <p>Experienced</p>
-                </div>
+                    <h3>Product Desiging</h3>
+                    <p>Experienced</p>
+                    </div>
             </article>
             <article>
                 <img
